Adapting integrations and notebooks to use TokenEnforcerTokenizerData concept

--- a/samples/colab_llama2_enforcer.ipynb
+++ b/samples/colab_llama2_enforcer.ipynb
@@ -130,9 +130,11 @@
     "from typing import Tuple, Optional, Union, List\n",
     "import pandas as pd\n",
     "from lmformatenforcer import JsonSchemaParser, CharacterLevelParser, RegexParser, StringParser\n",
-    "from lmformatenforcer.integrations.transformers import generate_enforced\n",
+    "from lmformatenforcer.integrations.transformers import generate_enforced, build_token_enforcer_tokenizer_data\n",
     "\n",
     "StringOrManyStrings = Union[str, List[str]]\n",
+    "\n",
+    "tokenizer_data = build_token_enforcer_tokenizer_data(tokenizer)\n",
     "\n",
     "def run(message: StringOrManyStrings,\n",
     "        system_prompt: str,\n",
@@ -174,7 +176,7 @@
     "        parser = JsonSchemaParser(None)\n",
     "\n",
     "    if parser:\n",
-    "        output = generate_enforced(model, tokenizer, parser, **generate_kwargs)\n",
+    "        output = generate_enforced(model, tokenizer_data, parser, **generate_kwargs)\n",
     "    else:\n",
     "        output = model.generate(**generate_kwargs)\n",
     "\n",
