--- a/samples/colab_llamacpppython_integration.ipynb
+++ b/samples/colab_llamacpppython_integration.ipynb
@@ -148,12 +148,14 @@
     "from typing import Optional\n",
     "from llama_cpp import LogitsProcessorList\n",
     "from lmformatenforcer import CharacterLevelParser\n",
-    "from lmformatenforcer.integrations.llamacpp import build_llamacpp_logits_processor\n",
+    "from lmformatenforcer.integrations.llamacpp import build_llamacpp_logits_processor, build_token_enforcer_tokenizer_data\n",
     "\n",
-    "def llamacpp_with_character_level_parser(llm: Llama, prompt: str, character_level_parser: Optional[CharacterLevelParser]) -> str:\n",
+    "tokenizer_data = build_token_enforcer_tokenizer_data(llm)\n",
+    "\n",
+    "def llamacpp_with_character_level_parser(prompt: str, character_level_parser: Optional[CharacterLevelParser]) -> str:\n",
     "    logits_processors: Optional[LogitsProcessorList] = None\n",
     "    if character_level_parser:\n",
-    "        logits_processors = LogitsProcessorList([build_llamacpp_logits_processor(llm, character_level_parser)])\n",
+    "        logits_processors = LogitsProcessorList([build_llamacpp_logits_processor(tokenizer_data, character_level_parser)])\n",
     "    \n",
     "    output = llm(prompt, logits_processor=logits_processors)\n",
     "    text: str = output['choices'][0]['text']\n",
@@ -380,15 +382,15 @@
     "display_content(prompt)\n",
     "\n",
     "display_header(\"Answer, Without json schema enforcing:\")\n",
-    "result = llamacpp_with_character_level_parser(llm, prompt, None)\n",
+    "result = llamacpp_with_character_level_parser(prompt, None)\n",
     "display_content(result)\n",
     "\n",
     "display_header(\"Answer, With json schema enforcing:\")\n",
-    "result = llamacpp_with_character_level_parser(llm, prompt, JsonSchemaParser(AnswerFormat.schema()))\n",
+    "result = llamacpp_with_character_level_parser(prompt, JsonSchemaParser(AnswerFormat.schema()))\n",
     "display_content(result)\n",
     "\n",
     "display_header(\"Answer, With json mode (json output, no specific schema) enforcing:\")\n",
-    "result = llamacpp_with_character_level_parser(llm, prompt, JsonSchemaParser(None))\n",
+    "result = llamacpp_with_character_level_parser(prompt, JsonSchemaParser(None))\n",
     "display_content(result)"
    ]
   },
