--- a/samples/colab_vllm_integration.ipynb
+++ b/samples/colab_vllm_integration.ipynb
@@ -172,7 +172,7 @@
    "outputs": [],
    "source": [
     "from lmformatenforcer import CharacterLevelParser\n",
-    "from lmformatenforcer.integrations.vllm import build_vllm_logits_processor\n",
+    "from lmformatenforcer.integrations.vllm import build_vllm_logits_processor, build_vllm_token_enforcer_tokenizer_data\n",
     "from typing import Union, List, Optional\n",
     "from vllm import SamplingParams\n",
     "\n",
@@ -180,12 +180,14 @@
     "\n",
     "ListOrStrList = Union[str, List[str]]\n",
     "\n",
-    "def vllm_with_character_level_parser(llm: vllm.LLM, prompt: ListOrStrList, parser: Optional[CharacterLevelParser] = None) -> ListOrStrList:\n",
+    "tokenizer_data = build_vllm_token_enforcer_tokenizer_data(llm)\n",
+    "\n",
+    "def vllm_with_character_level_parser(prompt: ListOrStrList, parser: Optional[CharacterLevelParser] = None) -> ListOrStrList:\n",
     "    \n",
     "    sampling_params = SamplingParams()\n",
     "    sampling_params.max_tokens = DEFAULT_MAX_NEW_TOKENS\n",
     "    if parser:\n",
-    "        logits_processor = build_vllm_logits_processor(llm, parser)\n",
+    "        logits_processor = build_vllm_logits_processor(tokenizer_data, parser)\n",
     "        sampling_params.logits_processors = [logits_processor]\n",
     "    # Note on batched generation:\n",
     "    # For some reason, I achieved better batch performance by manually adding a loop similar to this:\n",
@@ -357,11 +359,11 @@
     "\n",
     "display_header(\"Answer, With json schema enforcing:\")\n",
     "\n",
-    "result = vllm_with_character_level_parser(llm, prompt, JsonSchemaParser(AnswerFormat.schema()))\n",
+    "result = vllm_with_character_level_parser(prompt, JsonSchemaParser(AnswerFormat.schema()))\n",
     "display_content(result)\n",
     "\n",
     "display_header(\"Answer, Without json schema enforcing:\")\n",
-    "result = vllm_with_character_level_parser(llm, prompt, None)\n",
+    "result = vllm_with_character_level_parser(prompt, None)\n",
     "display_content(result)\n",
     "\n"
    ]
@@ -482,13 +484,13 @@
     "    prompts.append(prompt)\n",
     "\n",
     "start = time()\n",
-    "one_player_result = vllm_with_character_level_parser(llm, prompts[0], JsonSchemaParser(AnswerFormat.schema()))\n",
+    "one_player_result = vllm_with_character_level_parser(prompts[0], JsonSchemaParser(AnswerFormat.schema()))\n",
     "end = time()\n",
     "print(f'Time taken for 1 player: {end - start}s')\n",
     "display_content(one_player_result)\n",
     "\n",
     "start = time()\n",
-    "all_results = vllm_with_character_level_parser(llm, prompts[1:], JsonSchemaParser(AnswerFormat.schema()))\n",
+    "all_results = vllm_with_character_level_parser(prompts[1:], JsonSchemaParser(AnswerFormat.schema()))\n",
     "end = time()\n",
     "print(f'Time taken for {len(prompts)-1} players: {end - start}. Time per player: {(end - start)/(len(prompts)-1)}')\n",
     "display_content(all_results)"
@@ -925,7 +927,7 @@
     "display_content(prompt)\n",
     "\n",
     "# Note the analyze=True flag, which is will create an analyzer in the processor\n",
-    "logits_processor = build_vllm_logits_processor(llm, parser, analyze=True)\n",
+    "logits_processor = build_vllm_logits_processor(tokenizer_data, parser, analyze=True)\n",
     "\n",
     "sampling_params = SamplingParams(max_tokens=200, logits_processors=[logits_processor])\n",
     "results = llm.generate(prompt, sampling_params=sampling_params)\n",
