Cleanups to TRTLLM integration and sample before merge

--- a/samples/colab_trtllm_integration.ipynb
+++ b/samples/colab_trtllm_integration.ipynb
@@ -1,6 +1,86 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "3c18e4e1",
+   "metadata": {},
+   "source": [
+    "# LM Format Enforcer Integration with TensorRT-LLM\n",
+    "\n",
+    "<a target=\"_blank\" href=\"https://colab.research.google.com/github/noamgat/lm-format-enforcer/blob/main/samples/colab_trtllm_integration.ipynb\">\n",
+    "  <img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/>\n",
+    "</a>\n",
+    "\n",
+    "This notebook shows how you can integrate with NVIDIA's [TensorRT-LLM](https://github.com/NVIDIA/TensorRT-LLM) library, and generate guaranteed JSON-schema-compliant outputs using. The demo focuses on the integration with the library and does not show all capabilities. For a more thorough review of LM Format Enforcer's capabilities, see the [main sample notebook](https://colab.research.google.com/github/noamgat/lm-format-enforcer/blob/main/samples/colab_llama2_enforcer.ipynb).\n",
+    "\n",
+    "## Setting up the COLAB runtime (user action required)\n",
+    "\n",
+    "Contrary to other sample notebooks, this notebook requires Colab PRO and will NOT run on the free version. If you manage to find a way to get this demo working on a free Colab node, please reach out :)\n",
+    "\n",
+    "This colab-pro-friendly notebook is targeted at demoing the enforcer on LLAMA2."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9dabad44",
+   "metadata": {},
+   "source": [
+    "### Installing dependencies\n",
+    "\n",
+    "This may take a few minutes as tensorrt-llm needs to be installed from source for this to work"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d6f0bf72",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!apt-get update --allow-releaseinfo-change\n",
+    "!apt-get update && apt-get -y install openmpi-bin libopenmpi-dev\n",
+    "!pip install tensorrt_llm --pre --extra-index-url https://pypi.nvidia.com --extra-index-url https://download.pytorch.org/whl/cu122\n",
+    "\n",
+    "!pip install pynvml>=11.5.0 lm-format-enforcer huggingface_hub"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3d84eac1",
+   "metadata": {},
+   "source": [
+    "## Gathering huggingface credentials (user action required)\n",
+    "\n",
+    "This demo uses llama2, so you will have to create a free huggingface account, request access to the llama2 model, create an access token, and insert it when executing the next cell will request it.\n",
+    "\n",
+    "Links:\n",
+    "\n",
+    "- [Request access to llama model](https://huggingface.co/meta-llama/Llama-2-7b-chat-hf). See the \"Access Llama 2 on Hugging Face\" section.\n",
+    "- [Create huggingface access token](https://huggingface.co/settings/tokens)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "605d55a2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from huggingface_hub import snapshot_download, notebook_login\n",
+    "notebook_login()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3c83eda",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model_dir = snapshot_download(repo_id=\"Llama-2-7b-chat-hf\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "7de4691a-f69f-4fa1-b355-8e4cf753a561",
@@ -61,7 +141,7 @@
     }
    ],
    "source": [
-    "config = ModelConfig(model_dir=\"Llama-2-7b-chat-hf\")\n",
+    "config = ModelConfig(model_dir=model_dir)\n",
     "llm = LLM(config)"
    ]
   },
