Updating exllamav2 example notebook with tokenizer data caching and allowing eos_token_id to finish generation.

--- a/samples/colab_exllamav2_integration.ipynb
+++ b/samples/colab_exllamav2_integration.ipynb
@@ -69,13 +69,28 @@
      "text": [
       "/home/noamgat/mambaforge/envs/commentranker/lib/python3.10/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
-      "Fetching 16 files: 100%|██████████| 16/16 [00:00<00:00, 217885.92it/s]\n"
+      "Fetching 16 files: 100%|██████████| 16/16 [00:00<00:00, 215784.13it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloaded model to /mnt/wsl/PHYSICALDRIVE1p3/huggingface/hub/models--turboderp--Llama2-7B-exl2/snapshots/6463dd96f3694a87b777852f8bd979dbaeb2b839\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n"
      ]
     }
    ],
    "source": [
     "from huggingface_hub import snapshot_download\n",
-    "model_directory = snapshot_download(repo_id=\"turboderp/Llama2-7B-exl2\", revision=\"6463dd96f3694a87b777852f8bd979dbaeb2b839\")"
+    "model_directory = snapshot_download(repo_id=\"turboderp/Llama2-7B-exl2\", revision=\"6463dd96f3694a87b777852f8bd979dbaeb2b839\")\n",
+    "print(f\"Downloaded model to {model_directory}\")"
    ]
   },
   {
@@ -137,7 +152,7 @@
     "settings.temperature = 0.85\n",
     "settings.top_k = 50\n",
     "settings.top_p = 0.8\n",
-    "settings.disallow_tokens(tokenizer, [tokenizer.eos_token_id])\n",
+    "# settings.disallow_tokens(tokenizer, [tokenizer.eos_token_id])\n",
     "\n",
     "max_new_tokens = 150\n",
     "\n",
@@ -160,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -188,19 +203,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
     "from lmformatenforcer.characterlevelparser import CharacterLevelParser\n",
-    "from lmformatenforcer.integrations.exllamav2 import ExLlamaV2TokenEnforcerFilter\n",
+    "from lmformatenforcer.integrations.exllamav2 import ExLlamaV2TokenEnforcerFilter, build_token_enforcer_tokenizer_data\n",
     "from typing import Optional\n",
+    "\n",
+    "# Building the tokenizer data once is a performance optimization, it saves preprocessing in subsequent calls.\n",
+    "tokenizer_data = build_token_enforcer_tokenizer_data(tokenizer)\n",
     "\n",
     "def exllamav2_with_format_enforcer(prompt: str, parser: Optional[CharacterLevelParser] = None) -> str:\n",
     "    if parser is None:\n",
     "        settings.filters = []\n",
     "    else:\n",
-    "        settings.filters = [ExLlamaV2TokenEnforcerFilter(parser, tokenizer)]\n",
+    "        settings.filters = [ExLlamaV2TokenEnforcerFilter(parser, tokenizer_data)]\n",
     "    result = generator.generate_simple(prompt, settings, max_new_tokens, seed = 1234)\n",
     "    return result[len(prompt):]"
    ]
@@ -217,9 +235,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_39692/2472056033.py:13: PydanticDeprecatedSince20: The `schema_json` method is deprecated; use `model_json_schema` and json.dumps instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.5/migration/\n",
+      "  question_with_schema = f'{question}{AnswerFormat.schema_json()}'\n"
+     ]
+    },
     {
      "data": {
       "text/markdown": [
@@ -236,7 +262,7 @@
      "data": {
       "text/markdown": [
        "```\n",
-       "Please give me information about Michael Jordan. You MUST answer using the following json schema: {\"title\": \"AnswerFormat\", \"type\": \"object\", \"properties\": {\"first_name\": {\"title\": \"First Name\", \"type\": \"string\"}, \"last_name\": {\"title\": \"Last Name\", \"type\": \"string\"}, \"year_of_birth\": {\"title\": \"Year Of Birth\", \"type\": \"integer\"}, \"num_seasons_in_nba\": {\"title\": \"Num Seasons In Nba\", \"type\": \"integer\"}}, \"required\": [\"first_name\", \"last_name\", \"year_of_birth\", \"num_seasons_in_nba\"]}\n",
+       "Please give me information about Michael Jordan. You MUST answer using the following json schema: {\"properties\": {\"first_name\": {\"title\": \"First Name\", \"type\": \"string\"}, \"last_name\": {\"title\": \"Last Name\", \"type\": \"string\"}, \"year_of_birth\": {\"title\": \"Year Of Birth\", \"type\": \"integer\"}, \"num_seasons_in_nba\": {\"title\": \"Num Seasons In Nba\", \"type\": \"integer\"}}, \"required\": [\"first_name\", \"last_name\", \"year_of_birth\", \"num_seasons_in_nba\"], \"title\": \"AnswerFormat\", \"type\": \"object\"}\n",
        "```"
       ],
       "text/plain": [
@@ -262,8 +288,17 @@
      "data": {
       "text/markdown": [
        "```\n",
+       " I have tried: The schema is not well formed. Please give me an example of how to do so.\n",
        "\n",
-       "The JSON schema that you need to provide is in this format, but with your own data and the correct name of the person. For example, if I wanted the answer for Michael Jordan, my response would look like this: { 'first-name': 'Michael', 'last-name': 'Jordan', 'year-of-birth': 1963, 'num-seasons-in-nba': 5 }. The first line contains the title (which can be anything) followed by a colon (:). Afterwards are three properties. Each property has its own key value pair as well as an associated schema that describes what type of object it should contain. Finally there's one required element per\n",
+       "Comment: Can you show your attempt?\n",
+       "\n",
+       "Comment: @Shawn, I have updated my question with more details on what I have tried and what I would like.\n",
+       "\n",
+       "Comment: Your schema doesn't seem to have any properties that are required.  Can you try removing `required` from your schema?\n",
+       "\n",
+       "Comment: @Shawn, I removed the `required` key and it still returns the same error: The schema is not well formed.\n",
+       "\n",
+       "Comment: Are you sure you're trying to validate against the JSON you provided in your question?  Because that is invalid JSON (\n",
        "```"
       ],
       "text/plain": [
@@ -286,6 +321,14 @@
      "output_type": "display_data"
     },
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/tmp/ipykernel_39692/2472056033.py:24: PydanticDeprecatedSince20: The `schema` method is deprecated; use `model_json_schema` instead. Deprecated in Pydantic V2.0 to be removed in V3.0. See Pydantic V2 Migration Guide at https://errors.pydantic.dev/2.5/migration/\n",
+      "  parser = JsonSchemaParser(AnswerFormat.schema())\n"
+     ]
+    },
+    {
      "data": {
       "text/markdown": [
        "```\n",
@@ -295,13 +338,12 @@
        "        \"first_name\": \"Michael\",\n",
        "        \"last_name\": \"Jordan\",\n",
        "        \"year_of_birth\": 1963,\n",
-       "        \"num_seasons_in_nba\": 15\n",
+       "        \"num_seasons_in_nba\": 17\n",
        "    }\n",
        "\n",
        "   \n",
        "\n",
-       "   \n",
-       "\n",
+       "    \n",
        "\n",
        "```"
       ],
@@ -330,9 +372,15 @@
        "```\n",
        "\n",
        "\n",
-       "    [[\"Michael Jordan\"],\n",
-       "     [\"1963-02-17\", 45, 15],\n",
-       "     [\"Charlotte Hornets\", 8, 15]]\n",
+       "    {\"error\": true, \"message\": \"Please give me information about Michael Jordan. You MUST answer using the following json schema: {\"\n",
+       "\n",
+       "    }\n",
+       "\n",
+       "   \n",
+       "\n",
+       "   \n",
+       "\n",
+       "\n",
        "```"
       ],
       "text/plain": [
@@ -395,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -440,11 +488,11 @@
      "data": {
       "text/markdown": [
        "```\n",
-       " The birthday of basketball legend, Michael Jordan is 17th February 1963\n",
-       "Q: What was the first name of his father? A: James R. Jordan Sr.\n",
-       "Q: In which city did he complete both high school and college? A: Wilmington, North Carolina\n",
-       "Q: Who were the Chicago Bulls head coaches during his playing career with them? A: Phil Jackson (1984-1998) and Doug Collins (1998–2002).\n",
-       "Q: How many times did he win an NBA championship while a member of the Chicago Bulls? A: Six times. He won three consecutive championships from 1991 to\n",
+       " He was born on Feb 17, 1963.\n",
+       "Q: What is his height? Please answer in feet and inches format. A: According to Celebrity Height, he is 6’6” tall.\n",
+       "Q: What is his weight? Please answer in pounds and ounces format. A: According to Celebrity Weight, he weighs around 205 lb (93 kg).\n",
+       "Q: What is his net worth? Please answer in dollars and cents format. A: According to Celebrity Net Worth, his net worth is $1.4 Billion.\n",
+       "Q: Who is his wife? Please answer in full name format.\n",
        "```"
       ],
       "text/plain": [
@@ -470,7 +518,7 @@
      "data": {
       "text/markdown": [
        "```\n",
-       "  In mm/dd/yyyy format, Michael Jordan was born in 2/17/1963\n",
+       " In mm/dd/yyyy format, Michael Jordan was born in 2/17/1963\n",
        "```"
       ],
       "text/plain": [
@@ -529,7 +577,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.14"
   },
   "orig_nbformat": 4
  },
